finish the example

--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
       <div id="cat">
         <img
           id="cat-image"
-          src="https://cdn2.thecatapi.com/images/9sp.jpg"
+          class="hidden"
+          src=""
           alt="cat"
         />
+        <div id="cat-loader" class="loader">
+          Loading...
+        </div>
       </div>
     </div>
     <script type="module" src="/src/main.ts"></script>
